Add failure message for consecutive failures
DISABLED_CONSECUTIVE_FAILURES currently doesn't have an error message
associated with it, so show a generic "Connection failure" to the user.

Flag: EXEMPT minor UI fix

Bug: 359886044
Test: atest WifiTrackerLibTests
Change-Id: Ib57e3e27ad175a65aec9cd09ca09b61c2407fb38

--- a/libs/WifiTrackerLib/res/values/strings.xml
+++ b/libs/WifiTrackerLib/res/values/strings.xml
@@ -53,6 +53,9 @@
     <string name="wifitrackerlib_wifi_disabled_transition_disable_indication">Unavailable with current security settings</string>
 
     <!-- Status for networks disabled for unknown reason [CHAR LIMIT=NONE] -->
+    <string name="wifitrackerlib_wifi_disabled_consecutive_failures">Connection failure</string>
+
+    <!-- Status for networks disabled for unknown reason [CHAR LIMIT=NONE] -->
     <string name="wifitrackerlib_wifi_disabled_generic">Disabled</string>
 
     <!-- Summary for networks failing to connect due to one of the following reasons:
