--- a/libs/WifiTrackerLib/res/values-de/strings.xml
+++ b/libs/WifiTrackerLib/res/values-de/strings.xml
@@ -22,7 +22,7 @@
     <string name="wifitrackerlib_saved_network" msgid="5353460010746484376">"Gespeichert durch <xliff:g id="NAME">%1$s</xliff:g>"</string>
     <string name="wifitrackerlib_wifi_no_internet" msgid="4998563744669636949">"Kein Internetzugriff"</string>
     <string name="wifitrackerlib_wifi_disabled_password_failure" msgid="2850244218754633550">"Authentifizierungsproblem"</string>
-    <string name="wifitrackerlib_wifi_check_password_try_again" msgid="2327777719175574699">"Prüfe das Passwort und versuch es noch einmal"</string>
+    <string name="wifitrackerlib_wifi_check_password_try_again" msgid="2327777719175574699">"Prüfe das Passwort und versuche es noch einmal"</string>
     <string name="wifitrackerlib_wifi_disabled_network_failure" msgid="3046956554224277166">"IP-Konfigurationsfehler"</string>
     <string name="wifitrackerlib_wifi_disabled_transition_disable_indication" msgid="6416221593061166867">"Mit den aktuellen Sicherheitseinstellungen nicht verfügbar"</string>
     <string name="wifitrackerlib_wifi_disabled_consecutive_failures" msgid="7568234059979801397">"Verbindungsfehler"</string>
